Name:              imparse
Version:           0.0.0.1
Synopsis:          Multi-platform parser analyzer and generator.
Description:       Multi-platform parser analyzer and generator.
Category:          Text
License:           GPL
Author:            Andrei Lapets
Maintainer:        Andrei Lapets <lapets@bu.edu>
Build-Type:        Simple
Cabal-Version:     >= 1.2

library
  Exposed-Modules: Text.Imparse
  Build-Depends:   base >= 3 && < 5, MissingH, containers, text, split, ascetic, richreports